Fork from main leanote

--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
 <meta name="keywords" content="leanote,leanote.com">
 <meta name="description" content="leanote, Not Just A Notepad!">
 <meta name="author" content="leanote">
-<title class="lang">Leanote login</title>
+<title class="lang">SmashNotes Login</title>
 <link href="public/css/bootstrap.css" rel="stylesheet">
 <link href="public/css/font-awesome-4.2.0/css/font-awesome.css" rel="stylesheet">
 <link href="public/css/index.css" rel="stylesheet">
